--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Park Finder</h1>
     <form>
-        <label for="parkArea">Please choose an area</label>
+        <label for="parkArea">Please choose a state code (each state should be separated with a comma)</label>
         <input type="text" name="parkArea" id="js-parkArea" required>
         <label for="maxResults">maximum parks to return</label>
         <input type="number" name="maxResults" id="js-maxResults" value="10">
